--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event-invitation-app",
+  "name": "友達誘致サービス",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -59,7 +59,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
